...
      ),
    );
  }

  Widget _getText(BuildContext context) {
    return Ink(
        key: const Key("otaRadioButton"),
        padding: const EdgeInsets.only(left: kSize8),
        child: textWidget ??
            Text(
              label,
              style: isTextFontRegular ? AppTheme.kBodyRegular : AppTheme.kBody,
            ));
...
