...
import 'package:ota/common/utils/consts.dart';

const double _kDefaultElevation = 4.0;
enum OtaAppBarAction {
  backButton,
  filterButton,
  closeButton,
  customTrailingWidget
}

const String _kCloseIconKey = "close_icon";
const String _kFilterIconKey = "filter_icon_key";
const String _kBackIconKey = "back_icon_key";
...
