...

  AppLocalizationsStrings.rooms: 'ห้องพัก',
  AppLocalizationsStrings.roomTypes: 'ประเภทห้องพัก',
  AppLocalizationsStrings.chooseThisRoom: 'จอง',
  AppLocalizationsStrings.galleryButtonText: "ดูรูปที่พัก",
  AppLocalizationsStrings.seeAllReviews: "ดูรีวิวทั้งหมด",
  AppLocalizationsStrings.checkIn: "เช็คอิน",
  AppLocalizationsStrings.checkOut: "เช็คเอาต์",
  AppLocalizationsStrings.guest: "ผู้เข้าพัก",
  AppLocalizationsStrings.night: 'คืน',
  AppLocalizationsStrings.totalPrice: 'ราคารวม',
  AppLocalizationsStrings.bahtSymbol: '฿',
  AppLocalizationsStrings.review: 'รีวิว',
  AppLocalizationsStrings.accommodations: 'ที่พักแนะนำ',
  AppLocalizationsStrings.facilities: 'สิ่งอำนวยความสะดวกทั้งหมด',
...
  AppLocalizationsStrings.enterChildAge: 'ใส่อายุ (เฉพาะตัวเลขเท่านั้น)',
  AppLocalizationsStrings.bedType: 'ประเภทเตียง',
  AppLocalizationsStrings.bedTypeSubTitle: '*ขึ้นอยู่กับความพร้อมของที่พัก',
  AppLocalizationsStrings.selectBedType: 'เลือกประเภทเตียง',
  AppLocalizationsStrings.singleBedType: 'เตียงเดี่ยว',
  AppLocalizationsStrings.doubleBedType: 'เตียงคู่',
  AppLocalizationsStrings.confirm: 'ยืนยัน',
  AppLocalizationsStrings.unableToProceed: 'ไม่สามารถดำเนินการต่อได้',
  AppLocalizationsStrings.boookingMaxGuestLimitExceededMessage:
      'จำนวนผู้เข้าพักเกินกว่าที่กำหนด คุณสามารถจองได้สูงสุด 9 คนต่อการจองหนึ่งครั้ง',
  AppLocalizationsStrings.accomodation: 'ที่พัก',
  AppLocalizationsStrings.roomDetail: 'รายละเอียดห้องพัก',
  AppLocalizationsStrings.bookAccomodation: 'จองที่พัก',
...
  AppLocalizationsStrings.reservePersonLastNameRequired:
      'นามสกุล (จำเป็นต้องระบุ)',

  AppLocalizationsStrings.numberOfNights: "จำนวนคืน",
  AppLocalizationsStrings.numberOfGuests: "จำนวนผู้เข้าพัก",
  AppLocalizationsStrings.numberOfRooms: "จำนวนห้อง",
  AppLocalizationsStrings.roomLabel: 'ห้อง',

  AppLocalizationsStrings.noOfServices: 'จำนวน',
  AppLocalizationsStrings.dateOfService: 'วันที่รับบริการ',
  AppLocalizationsStrings.additionalServices: 'บริการเพิ่มเติม',
  AppLocalizationsStrings.addItems: 'เพิ่มรายการ',
  AppLocalizationsStrings.edit: 'แก้ไข',
...
