...
          ),
        ),
      );

  Widget _buildSurroundingCircle() => Center(
        //
        key: const Key('circledDay'),
        child: Container(
          height: _innerCellHeight,
          width: _innerCellHeight,
          decoration: const BoxDecoration(
            color: AppColors.kSecondary,
            shape: BoxShape.circle,
...
